--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,7 @@
   display: none; }
 
 .header-background {
-  position: relative;
-  /* font-size: 20px;
-  
-  padding: 10px 40px;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
-    url("../../imagenes/desktop/ancash-huaraz.jpg");
-  background-position: center center;
-  background-repeat: none;
-  background-size: cover;
-  color: black;
-  height: 50vh; */ }
+  position: relative; }
   .header-background .header-desktop-background {
     display: grid;
     grid-template-rows: 50vh 50vh; }
@@ -97,9 +87,13 @@
   background-color: #1f2233;
   color: white;
   text-align: center;
-  padding: 40px 0px 0; }
-  .todo-el-contenido main .main-principal {
-    padding: 0px 10px 0; }
+  padding: 40px 0px 0;
+  /* main {
+    .main-principal {
+      padding: 0px 10px 0;
+
+    }
+  } */ }
   .todo-el-contenido .sobreMi-container {
     display: grid;
     grid-template-columns: 30% 70%;
@@ -167,7 +161,8 @@
     .todo-el-contenido .estudios-especializaciones .btnMenu-container {
       display: flex;
       justify-content: center;
-      padding-bottom: 20px; }
+      padding-bottom: 20px;
+      font-size: 20px; }
       .todo-el-contenido .estudios-especializaciones .btnMenu-container button {
         margin: 10px;
         padding: 0.375rem;
@@ -234,27 +229,33 @@
             margin: 0 2em;
             box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
             border: none;
-            border-radius: 0;
+            border-radius: 10px;
             background-color: gray;
-            padding: 50px; }
-            .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a {
-              padding: 15px;
-              font-size: 17px;
-              letter-spacing: 1.3px;
-              background: linear-gradient(45deg, red, #800000, #400000, black);
-              border: none;
-              color: white;
-              border-radius: 10px;
-              width: fit-content;
-              margin: 0;
-              font-weight: 900;
-              cursor: pointer; }
-              .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a:hover {
-                opacity: 0.7; }
+            width: 350px;
+            height: 370px;
+            display: grid;
+            grid-template-rows: 50% 50%; }
             .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card img {
-              max-width: 70%;
-              height: 110px;
-              margin: auto; }
+              width: 100%;
+              height: 100%;
+              margin: auto;
+              grid-row: 1; }
+            .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card .card-body {
+              grid-row: 2; }
+              .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card .card-body a {
+                padding: 15px;
+                font-size: 17px;
+                letter-spacing: 1.3px;
+                background: linear-gradient(45deg, red, #800000, #400000, black);
+                border: none;
+                color: white;
+                border-radius: 10px;
+                width: fit-content;
+                margin: 0;
+                font-weight: 900;
+                cursor: pointer; }
+                .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card .card-body a:hover {
+                  opacity: 0.7; }
     .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-control-prev,
     .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-control-next {
       background-color: gray;
@@ -278,98 +279,96 @@
 @media (max-width: 576px) {
   .header-info-portfolio,
   .proyecto-pig-game,
-  .portfolio-container-desktop {
+  .portfolio-container-desktop, .header-info-portfolio ul li {
     display: none; }
-  header {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    padding: 20px;
-    position: sticky;
-    top: 0;
-    background-color: black;
-    color: white;
-    z-index: 100;
-    width: 100%; }
-    header p {
-      padding-left: 10px; }
-    header::after {
-      content: "";
-      position: absolute;
-      bottom: 0px;
-      /* Ajusta esto para controlar la posición vertical del subrayado */
-      transform: translateX(-50%);
-      width: 100%;
-      height: 2px;
-      /* Ajusta esto para controlar el grosor del subrayado */
-      background-color: #2e2f36;
-      /* Cambia esto para cambiar el color del subrayado */
-      left: 50%; }
-    header .header-nombre-portfolio {
-      grid-column: 1;
-      width: fit-content; }
-      header .header-nombre-portfolio a {
-        color: white;
-        text-decoration: none; }
-        header .header-nombre-portfolio a p {
-          display: flex; }
-    header .header-menuHamburguesa-container {
-      display: block;
-      grid-column: 2;
-      text-align: right;
-      width: 50%; }
-  .header-info-mobile {
-    z-index: 100;
-    background-color: black;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 60px;
-    color: white; }
-    .header-info-mobile ul {
-      list-style: none;
-      text-align: center;
-      line-height: 50px;
-      height: 100vh;
-      font-size: 20px;
-      margin: 0;
-      /* Elimina el margen por defecto del ul */
-      padding: 0;
-      /* Elimina el padding por defecto del ul */
+  .header-background {
+    position: relative; }
+    .header-background .header-desktop-background {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      /* Centra verticalmente los elementos */
-      align-items: center;
-      /* Centra horizontalmente los elementos */ }
-      .header-info-mobile ul a {
+      flex-direction: column; }
+      .header-background .header-desktop-background .header-info-portfolio {
+        background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../../imagenes/desktop/ancash-huaraz.jpg");
+        background-position: center center;
+        background-repeat: none;
+        background-size: cover;
+        grid-row: 1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        height: 30vh; }
+      .header-background .header-desktop-background .header-seccionVacia {
+        grid-row: 2;
+        background-color: #1f2233; }
+    .header-background .header-container-fotoTitulo {
+      position: absolute;
+      top: 120%;
+      /* Centra en la mitad de la pantalla verticalmente */
+      left: 50%;
+      /* Centra en la mitad de la pantalla horizontalmente */
+      transform: translate(-50%, -50%);
+      /* Ajusta para centrar correctamente */ }
+      .header-background .header-container-fotoTitulo .header-background-foto {
+        margin: auto;
+        text-align: center;
+        grid-row: 1; }
+        .header-background .header-container-fotoTitulo .header-background-foto .header-foto {
+          width: 200px;
+          display: block;
+          /* Asegura que la imagen se centre correctamente */
+          margin: auto;
+          /* Centra la imagen horizontalmente */ }
+      .header-background .header-container-fotoTitulo .header-titulos {
+        text-align: center;
+        color: white; }
+        .header-background .header-container-fotoTitulo .header-titulos h1 {
+          color: #d96959; }
+    .header-background .header-nombre-portfolio {
+      padding-right: 20px;
+      margin-left: 10px;
+      width: fit-content; }
+      .header-background .header-nombre-portfolio a {
         color: white;
         text-decoration: none; }
+        .header-background .header-nombre-portfolio a p {
+          margin: 0; }
   .oculto {
     display: none; }
   .todo-el-contenido {
-    background-color: #1a1a1a;
-    color: white; }
-    .todo-el-contenido main {
+    background-color: #1f2233;
+    color: white;
+    padding-top: 40vh;
+    /* main {
       position: relative;
-      z-index: 1; }
-      .todo-el-contenido main .main-principal {
+      z-index: 1;
+
+      .main-principal {
         display: flex;
         flex-direction: column;
         text-align: center;
-        padding: 20px 10px 0; }
-        .todo-el-contenido main .main-principal .main-foto {
+        padding: 20px 10px 0;
+
+        .main-foto {
           padding: 20px 0;
           float: none;
-          width: 100%; }
-          .todo-el-contenido main .main-principal .main-foto img {
-            width: 60%; }
-      .todo-el-contenido main .main-secundaria {
+          width: 100%;
+
+          img {
+            width: 60%;
+          }
+        }
+      }
+
+      .main-secundaria {
         text-align: center;
-        padding-bottom: 20px; }
-        .todo-el-contenido main .main-secundaria .redes i {
-          font-size: 20px;
-          color: white; }
+        padding-bottom: 20px;
+
+        .redes {
+          i {
+            font-size: 20px;
+            color: white;
+          }
+        }
+      }
+    } */ }
     .todo-el-contenido .sobreMi-container,
     .todo-el-contenido .portfolio-container,
     .todo-el-contenido .contacto-container,
@@ -408,9 +407,9 @@
     .todo-el-contenido .sobreMi-container {
       display: flex;
       flex-direction: column;
-      padding: 40px 10px; }
+      padding: 0; }
       .todo-el-contenido .sobreMi-container .seccion-fotoSobreMi .main-foto {
-        padding: 20px 0; }
+        padding: 0; }
         .todo-el-contenido .sobreMi-container .seccion-fotoSobreMi .main-foto img {
           width: 60%; }
         .todo-el-contenido .sobreMi-container .seccion-fotoSobreMi .main-foto .redes {
@@ -423,7 +422,7 @@
         text-align: center; }
       .todo-el-contenido .sobreMi-container .texto-sobreMi p {
         text-align: left;
-        padding: 25px 50px;
+        padding: 25px;
         line-height: 30px;
         font-size: 18px; }
         .todo-el-contenido .sobreMi-container .texto-sobreMi p:nth-of-type(2) {
@@ -434,7 +433,7 @@
       .todo-el-contenido .estudios-especializaciones .btnMenu-container {
         display: flex;
         justify-content: center;
-        padding-bottom: 20px; }
+        padding: 20px 0 0 0; }
         .todo-el-contenido .estudios-especializaciones .btnMenu-container button {
           margin: 10px;
           padding: 0.375rem;
@@ -446,40 +445,53 @@
           background-color: #eb5c4f; }
       .todo-el-contenido .estudios-especializaciones .cards-container {
         display: flex;
-        justify-content: space-evenly;
-        min-height: 304px;
-        max-width: 100%; }
+        flex-direction: column;
+        width: 100%;
+        padding: 20px 0; }
         .todo-el-contenido .estudios-especializaciones .cards-container .card {
-          width: 100%;
-          margin: 0 1em;
+          max-width: 80%;
+          margin: 10px auto;
           box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
           border: 1px solid #423949;
           border-radius: 0;
           background-color: #1f2233;
-          padding: 25px; }
+          height: 220px;
+          display: flex;
+          /* padding: 50px; */ }
           .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body {
-            width: 200px;
+            /* width: 200px; */
             margin: auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: white; }
-            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body .card-text {
-              padding: 0; }
+            color: white;
+            font-size: 14px;
+            padding: 0;
+            /* .card-body .card-text:nth-child(2){
+              font-size: 30px;
+            } */ }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body .card-title {
+              font-size: 20px; }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body p {
+              font-size: 16px;
+              margin: 5px 0; }
+          .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos .card-text {
+            padding: 0;
+            font-size: 4px; }
           .todo-el-contenido .estudios-especializaciones .cards-container .card .btnVerMas {
             width: fit-content;
             margin: auto;
             border: none;
             background-color: transparent; }
             .todo-el-contenido .estudios-especializaciones .cards-container .card .btnVerMas i {
-              font-size: 40px; }
+              font-size: 20px; }
           .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos {
             width: 100%;
             display: flex;
             justify-content: space-around; }
             .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos i {
-              font-size: 3rem; }
+              font-size: 2rem; }
             .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos img {
               width: 3rem; }
           .todo-el-contenido .estudios-especializaciones .cards-container .card .oculto {
