--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -12,16 +12,7 @@
 
 .header-background {
   position: relative;
-  /* font-size: 20px;
   
-  padding: 10px 40px;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
-    url("../../imagenes/desktop/ancash-huaraz.jpg");
-  background-position: center center;
-  background-repeat: none;
-  background-size: cover;
-  color: black;
-  height: 50vh; */
 
   .header-desktop-background {
     display: grid;
@@ -70,15 +61,18 @@
     .header-seccionVacia {
       grid-row: 2;
       background-color: rgb(31, 34, 51);
-
+      
     }
   }
 
   .header-container-fotoTitulo {
     position: absolute;
-    top: 55%; /* Centra en la mitad de la pantalla verticalmente */
-    left: 50%; /* Centra en la mitad de la pantalla horizontalmente */
-    transform: translate(-50%, -50%); /* Ajusta para centrar correctamente */
+    top: 55%;
+    /* Centra en la mitad de la pantalla verticalmente */
+    left: 50%;
+    /* Centra en la mitad de la pantalla horizontalmente */
+    transform: translate(-50%, -50%);
+    /* Ajusta para centrar correctamente */
 
     .header-background-foto {
       margin: auto;
@@ -87,8 +81,10 @@
 
       .header-foto {
         width: 200px;
-        display: block; /* Asegura que la imagen se centre correctamente */
-        margin: auto; /* Centra la imagen horizontalmente */
+        display: block;
+        /* Asegura que la imagen se centre correctamente */
+        margin: auto;
+        /* Centra la imagen horizontalmente */
       }
 
     }
@@ -124,18 +120,18 @@
 
 
 .todo-el-contenido {
-
+  
   background-color: rgb(31, 34, 51);
   color: white;
   text-align: center;
   padding: 40px 0px 0;
 
-  main {
+  /* main {
     .main-principal {
       padding: 0px 10px 0;
 
     }
-  }
+  } */
 
 
   .sobreMi-container {
@@ -232,6 +228,7 @@
       display: flex;
       justify-content: center;
       padding-bottom: 20px;
+      font-size: 20px;
 
       button {
         margin: 10px;
@@ -320,57 +317,68 @@
     }
 
   }
-  .portfolio-container-desktop{
+
+  .portfolio-container-desktop {
     padding: 20px;
+
     #carouselExampleIndicators2 {
       .carousel-inner {
         padding: 5em;
         padding-top: 2em;
-  
+
         .carousel-item {
           max-width: 100%;
-  
+
           .cards-container {
             display: flex;
             justify-content: space-evenly;
-  
+
             .card {
               max-width: calc(100%/3);
               margin: 0 2em;
               box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
               border: none;
-              border-radius: 0;
+              border-radius: 10px;
               background-color: gray;
-              padding: 50px;
-  
-              a {
-                padding: 15px;
-                font-size: 17px;
-                letter-spacing: 1.3px;
-                background: linear-gradient(45deg, red, #800000, #400000, black);
-                border: none;
-                color: white;
-                border-radius: 10px;
-                width: fit-content;
-                margin: 0;
-                font-weight: 900;
-                cursor: pointer;
-  
-                &:hover {
-                  opacity: 0.7;
+              width: 350px;
+              height: 370px;
+              display: grid;
+              grid-template-rows: 50% 50%;
+
+              img {
+                width: 100%;
+                height: 100%;
+                margin: auto;
+                grid-row: 1;
+              }
+              .card-body {
+                grid-row: 2;
+                a {
+                  padding: 15px;
+                  font-size: 17px;
+                  letter-spacing: 1.3px;
+                  background: linear-gradient(45deg, red, #800000, #400000, black);
+                  border: none;
+                  color: white;
+                  border-radius: 10px;
+                  width: fit-content;
+                  margin: 0;
+                  font-weight: 900;
+                  cursor: pointer;
+
+                  &:hover {
+                    opacity: 0.7;
+                  }
                 }
               }
-  
-              img {
-                max-width: 70%;
-                height: 110px;
-                margin: auto;
-              }
+
+
+              
             }
           }
         }
       }
-  
+
       .carousel-control-prev,
       .carousel-control-next {
         background-color: gray;
@@ -383,7 +391,7 @@
     }
   }
 
-  
+
 
 
   .contacto-container {
@@ -416,107 +424,104 @@
 
   .header-info-portfolio,
   .proyecto-pig-game,
-  .portfolio-container-desktop {
+  .portfolio-container-desktop, .header-info-portfolio ul li {
     display: none;
   }
 
-  header {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    padding: 20px;
-    position: sticky;
-    top: 0;
-    background-color: black;
-    color: white;
-    z-index: 100;
-    width: 100%;
-
-    p {
-      padding-left: 10px;
+  .header-background {
+    position: relative;
+    
+  
+    .header-desktop-background {
+      display: flex;
+      flex-direction: column;
+  
+      .header-info-portfolio {
+        background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
+          url("../../imagenes/desktop/ancash-huaraz.jpg");
+        background-position: center center;
+        background-repeat: none;
+        background-size: cover;
+        grid-row: 1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        height: 30vh;
+        
+  
+      }
+  
+      .header-seccionVacia {
+        grid-row: 2;
+        background-color: rgb(31, 34, 51);
+        
+      }
     }
-
-    &::after {
-      content: "";
+  
+    .header-container-fotoTitulo {
       position: absolute;
-      bottom: 0px;
-      /* Ajusta esto para controlar la posición vertical del subrayado */
-      transform: translateX(-50%);
-      width: 100%;
-      height: 2px;
-      /* Ajusta esto para controlar el grosor del subrayado */
-      background-color: rgb(46,
-          47,
-          54);
-      /* Cambia esto para cambiar el color del subrayado */
+      top: 120%;
+      /* Centra en la mitad de la pantalla verticalmente */
       left: 50%;
+      /* Centra en la mitad de la pantalla horizontalmente */
+      transform: translate(-50%, -50%);
+      /* Ajusta para centrar correctamente */
+  
+      .header-background-foto {
+        margin: auto;
+        text-align: center;
+        grid-row: 1;
+  
+        .header-foto {
+          width: 200px;
+          display: block;
+          /* Asegura que la imagen se centre correctamente */
+          margin: auto;
+          /* Centra la imagen horizontalmente */
+        }
+  
+      }
+  
+      .header-titulos {
+        text-align: center;
+        color: white;
+  
+        h1 {
+          color: rgb(217, 105, 89);
+        }
+      }
+  
     }
-
+  
     .header-nombre-portfolio {
-      grid-column: 1;
+      padding-right: 20px;
+      margin-left: 10px;
       width: fit-content;
-
+  
       a {
         color: white;
         text-decoration: none;
-
+  
         p {
-          display: flex;
+          margin: 0;
+  
         }
       }
     }
-
-    .header-menuHamburguesa-container {
-      display: block;
-      grid-column: 2;
-      text-align: right;
-      width: 50%;
-    }
+  
   }
 
-  .header-info-mobile {
-    z-index: 100;
-    background-color: black;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-
-    position: fixed;
-    top: 60px;
-    color: white;
-
-    ul {
-      list-style: none;
-      text-align: center;
-      line-height: 50px;
-      height: 100vh;
-      font-size: 20px;
-      margin: 0;
-      /* Elimina el margen por defecto del ul */
-      padding: 0;
-      /* Elimina el padding por defecto del ul */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      /* Centra verticalmente los elementos */
-      align-items: center;
-
-      /* Centra horizontalmente los elementos */
-      a {
-        color: white;
-        text-decoration: none;
-      }
-    }
-  }
+  
 
   .oculto {
     display: none;
   }
 
   .todo-el-contenido {
-    background-color: rgba(26, 26, 26, 1);
+    background-color: rgb(31, 34, 51);
     color: white;
+    padding-top: 40vh;
 
-    main {
+    /* main {
       position: relative;
       z-index: 1;
 
@@ -548,7 +553,7 @@
           }
         }
       }
-    }
+    } */
 
 
     .sobreMi-container,
@@ -589,13 +594,13 @@
     .sobreMi-container {
       display: flex;
       flex-direction: column;
-
-      padding: 40px 10px;
+      
+      padding: 0;
 
       .seccion-fotoSobreMi {
 
         .main-foto {
-          padding: 20px 0;
+          padding: 0;
 
           img {
             width: 60%;
@@ -624,7 +629,7 @@
 
         p {
           text-align: left;
-          padding: 25px 50px;
+          padding: 25px;
           line-height: 30px;
           font-size: 18px;
 
@@ -639,12 +644,12 @@
     .estudios-especializaciones {
       background-color: rgb(37, 39, 62);
       padding: 0px;
-  
+
       .btnMenu-container {
         display: flex;
         justify-content: center;
-        padding-bottom: 20px;
-  
+        padding: 20px 0 0 0;
+
         button {
           margin: 10px;
           padding: 0.375rem;
@@ -653,84 +658,101 @@
           color: white;
           border: 1px solid rgb(37, 39, 62);
         }
-  
+
         .btn-seleccionado {
           background-color: rgb(235, 92, 79);
         }
-  
+
       }
-  
+
       .cards-container {
         display: flex;
-        justify-content: space-evenly;
-        min-height: 304px;
-        max-width: 100%;
-  
-  
+        flex-direction: column;
+        width: 100%;
+        padding: 20px 0;
+
         .card {
-          width: 100%;
-          margin: 0 1em;
+          max-width: 80%;
+          margin: 10px auto;
           box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
           border: 1px solid rgb(66, 57, 73);
           border-radius: 0;
           background-color: rgb(31, 34, 51);
-          padding: 25px;
-  
-  
+          height: 220px;
+          display: flex;
+          /* padding: 50px; */
+          
           .card-body {
-            width: 200px;
+            /* width: 200px; */
             margin: auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             color: white;
-  
-  
-  
+            font-size: 14px;
+            padding: 0;
+
+
+            .card-title{
+              font-size: 20px;
+            }
+            p{
+              font-size: 16px;
+              margin: 5px 0;
+            }
+            
+            /* .card-body .card-text:nth-child(2){
+              font-size: 30px;
+            } */
+
+            
+          }
+          .card-iconos{
             .card-text {
               padding: 0;
+              font-size: 4px;
             }
           }
-  
+
           .btnVerMas {
             width: fit-content;
             margin: auto;
             border: none;
             background-color: transparent;
-  
+
             i {
-              font-size: 40px;
+              font-size: 20px;
             }
           }
-  
+
           .card-iconos {
             width: 100%;
             display: flex;
             justify-content: space-around;
-  
+
             i {
-              font-size: 3rem;
+              font-size: 2rem;
             }
-  
+
             img {
               width: 3rem;
             }
           }
-  
+
           .oculto {
             display: none;
           }
-  
-  
+
+
         }
-  
+
       }
-  
+
       .oculto {
         display: none;
       }
-  
+
     }
 
     .portfolio-container-mobile {
